[package]
name = "p7-compiler"
version = "0.1.0"
authors = ["James Dong <dong.james.sept14@gmail.com>",
           "Jack Youstra <jack@youstra.com>"]
repository = "https://github.com/j-dong/p7-compiler"
license = "GPL-3.0-or-later"

build = "build.rs"

[dependencies]
lalrpop-util = "0.15.0"
regex = "0.2.0"
bit-set = "0.4.0"

[build-dependencies]
lalrpop = "0.15.0"
